RESOLVED FIXED236874
http/wpt/push-api/onpush-disabled.html fails
https://bugs.webkit.org/show_bug.cgi?id=236874
Summary http/wpt/push-api/onpush-disabled.html fails
Ryan Haddad
Reported 2022-02-18 18:30:16 PST
http/wpt/push-api/onpush-disabled.html is failing on bots, but may be related to an issue with incremental builds & the IDL file change when it was added with https://trac.webkit.org/changeset/290156/webkit --- /Volumes/Data/worker/bigsur-release-applesilicon-tests-wk2/build/layout-test-results/http/wpt/push-api/onpush-disabled-expected.txt +++ /Volumes/Data/worker/bigsur-release-applesilicon-tests-wk2/build/layout-test-results/http/wpt/push-api/onpush-disabled-actual.txt @@ -1,4 +1,4 @@ -PASS onpush should not be exposed on ServiceWorkerGlobalScope -PASS onpushsubscriptionchange should not be exposed on ServiceWorkerGlobalScope +FAIL onpush should not be exposed on ServiceWorkerGlobalScope assert_false: expected false got true +FAIL onpushsubscriptionchange should not be exposed on ServiceWorkerGlobalScope assert_false: expected false got true https://results.webkit.org/?suite=layout-tests&test=http%2Fwpt%2Fpush-api%2Fonpush-disabled.html
Attachments
Patch (20.22 KB, patch)
2022-02-22 16:11 PST, Chris Dumez
no flags
Radar WebKit Bug Importer
Comment 1 2022-02-18 18:30:38 PST
Ryan Haddad
Comment 2 2022-02-18 18:40:20 PST
Well, I triggered a clean build on a trunk bot and it appears that the test still fails: https://build.webkit.org/#/builders/104/builds/6665
Ryan Haddad
Comment 3 2022-02-18 18:47:48 PST
Marked test as failing in r290192 to help EWS.
Chris Dumez
Comment 4 2022-02-22 12:27:22 PST
Ok, it appears I can reproduce if I run the whole http/wpt folder. I am investigating.
Chris Dumez
Comment 5 2022-02-22 16:11:56 PST
EWS
Comment 6 2022-02-22 23:36:26 PST
Committed r290352 (247670@main): <https://commits.webkit.org/247670@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 452910 [details].
Patrick Angle
Comment 7 2022-06-29 18:54:47 PDT
*** Bug 240705 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.